<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.screens.StartFragment">


    <TextView
        android:id="@+id/welcomeText"
        style="@style/baseText"
        android:text="@string/welcome_to_this_amazing_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <ImageButton
        android:id="@+id/btnStartGame"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_bck"
        android:contentDescription="@string/startDesc"
        android:text="@string/startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        style="@style/baseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        app:layout_constraintBottom_toBottomOf="@+id/btnStartGame"
        app:layout_constraintEnd_toEndOf="@+id/btnStartGame"
        app:layout_constraintStart_toStartOf="@+id/btnStartGame"
        app:layout_constraintTop_toTopOf="@+id/btnStartGame" />

</androidx.constraintlayout.widget.ConstraintLayout>